[package]
name = "rust_maps"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
geo = "0.18.0"
image = "0.23.14"
gdal = "0.9.0"
serde_json = "1.0.59"
urlencoding = "2.1.0"
bevy = { version = "0.5.0"}
async-compat = "0.2.1"
futures-lite = "1.11.3"