[package]
name = "rust_maps"
version = "0.1.0"
edition = "2018"
default-run = "rust_maps"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
image = "0.23.14"
serde_json = "1.0.59"
urlencoding = "2.1.0"
bevy = { version = "0.5.0"}
async-compat = "0.2.1"
futures-lite = "1.11.3"
lerc = { git = "https://github.com/JPonte/rust-lerc" }
bevy_egui = "0.7"

[[bin]]
name = "globe"
path = "src/globe.rs"